--- a/sentiment.html
+++ b/sentiment.html
@@ -16,6 +16,51 @@
         <a href="#" id="projects">Viraj Patil : 321025</a>
         <a href="#" id="contact">Kundan Kabra : 321023</a>
       </div>
+      <div class="container jumbotron">
+        <div class="sub" style="text-align: center;font-size: larger;">Top Movies(2010-2019) According to IMDB Votes (Also IMDB rating filter added)</div>
+        <br>
+        <!-- top movies  -->
+        <div class="top_movies">
+            <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'>
+            </script><div class='tableauPlaceholder' style='width: 50%; height: 571px;'>
+            <object class='tableauViz' width='100%' height='571' style='display:none;'>
+                <param name='host_url' value='https%3A%2F%2Fprod-apnortheast-a.online.tableau.com%2F' /> 
+                <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;kundankabra' /><param name='name' value='mini_2010to2019&#47;Sheet2' /><param name='tabs' value='no' /><param name='toolbar' value='yes' />
+                <param name='showAppBanner' value='false' /></object></div>
+        </div>
+        <br>
+        <!-- sentiments -->
+        <div class="row">
+        <div class="col-sm-6 dangal">
+            <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'>
+            </script><div class='tableauPlaceholder' style='width: 60%; height: 400px;'>
+            <object class='tableauViz' width='100%' height='430px' style='display:none;'>
+                <param name='host_url' value='https%3A%2F%2Fprod-apnortheast-a.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;kundankabra' /><param name='name' value='Dangal&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' />
+                <param name='showAppBanner' value='false' /></object></div>
+        </div>
+        <div class="col-sm-6 andhadhun">
+            <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'>
+            </script><div class='tableauPlaceholder' style='width: 60%; height: 400px;'>
+            <object class='tableauViz' width='100%' height='430px' style='display:none;'>
+                <param name='host_url' value='https%3A%2F%2Fprod-apnortheast-a.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;kundankabra' /><param name='name' value='andhadhun&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' />
+                <param name='showAppBanner' value='false' /></object></div>
+        </div>
+        <br>
+        <div class="col-sm-6 dangal">
+            <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'>
+            </script><div class='tableauPlaceholder' style='width: 60%; height: 400px; margin-top: 5px;'>
+            <object class='tableauViz'  width='100%' height='430px' style='display:none;'><param name='host_url' value='https%3A%2F%2Fprod-apnortheast-a.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;kundankabra' /><param name='name' value='uri&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' />
+                <param name='showAppBanner' value='false' /></object></div>
+        </div>
+        <div class="col-sm-6 andhadhun">
+            <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'>
+            </script><div class='tableauPlaceholder' style='width: 60%; height: 400px;margin-top: 5px;'>
+            <object class='tableauViz'   width='100%' height='430px' style='display:none;'><param name='host_url' value='https%3A%2F%2Fprod-apnortheast-a.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;kundankabra' /><param name='name' value='section375&#47;Sheet1' /><param name='tabs' value='no' />
+                <param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /></object></div>
+        </div>
+        </div>
+      </div>
+
 
 <!-- jQuery and JS bundle w/ Popper.js -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
