--- a/predictive.html
+++ b/predictive.html
@@ -1,33 +1,210 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>KUMAVISA Entertainment</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="pre.css">
 </head>
+
 <body>
-    <br/>
+    <br />
     <div id="mySidenav" class="sidenav">
         <a href="#" id="about">Sachi Trambadia : 321057</a>
-        <a href="#" id="blog">Mahek Mulla      : 321043</a>
+        <a href="#" id="blog">Mahek Mulla : 321043</a>
         <a href="#" id="projects">Viraj Patil : 321025</a>
         <a href="#" id="contact">Kundan Kabra : 321023</a>
-      </div>
-
-<div class="container">
-      <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'>
-    </script><div class='tableauPlaceholder' style='width: 700px; height: 571px;'>
-    <object class='tableauViz' width='700' height='571' style='display:none;'>
-        <param name='host_url' value='https%3A%2F%2Fprod-apnortheast-a.online.tableau.com%2F' /> 
-        <param name='embed_code_version' value='3' /> 
-        <param name='site_root' value='&#47;t&#47;kundankabra' />
-        <param name='name' value='predict&#47;Sheet12' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /></object></div>
     </div>
-<!-- jQuery and JS bundle w/ Popper.js -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+    <div class="container jumbotron">
+        <div class="sub" style="text-align: center;">Top genre</div>
+
+        <div class="genre">
+            <div class='tableauPlaceholder' id='viz1606908630882' style='position: relative;width:50%;height: 571px;'>
+                <noscript><a href='#'><img alt=' '
+                            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;predict_16069085618890&#47;GenreIMDb&#47;1_rss.png'
+                            style='border: none;width:50%;height: 571px;' /></a></noscript><object class='tableauViz'
+                    style='display:none;'>
+                    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                    <param name='embed_code_version' value='3' />
+                    <param name='site_root' value='' />
+                    <param name='name' value='predict_16069085618890&#47;GenreIMDb' />
+                    <param name='tabs' value='no' />
+                    <param name='toolbar' value='yes' />
+                    <param name='static_image'
+                        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;predict_16069085618890&#47;GenreIMDb&#47;1.png' />
+                    <param name='animate_transition' value='yes' />
+                    <param name='display_static_image' value='yes' />
+                    <param name='display_spinner' value='yes' />
+                    <param name='display_overlay' value='yes' />
+                    <param name='display_count' value='yes' />
+                    <param name='language' value='en' />
+                    <param name='filter' value='publish=yes' /></object></div>
+            <script
+                type='text/javascript'> var divElement = document.getElementById('viz1606908630882'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);</script>
+        </div>
+        <br>
+        <div class="sub" style="text-align: center;font-size: x-large;color: darkorange;">Taking Top 5 Genres for forecasting and predicting how they will
+            perform in future</div>
+        <br>
+        <div class="sub" style="text-align: center;">From Critics Point of View(taking imdb rating into perspective)</div>
+        <div class="pred-cri">
+            <div class='tableauPlaceholder' id='viz1606910611040' style='position: relative;width:50%;height: 571px;'>
+                <noscript><a href='#'><img alt=' '
+                            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;predict_16069085618890&#47;finalimdbpred&#47;1_rss.png'
+                            style='border: none;width:50%;height: 571px;' /></a></noscript><object class='tableauViz'
+                    style='display:none;'>
+                    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                    <param name='embed_code_version' value='3' />
+                    <param name='site_root' value='' />
+                    <param name='name' value='predict_16069085618890&#47;finalimdbpred' />
+                    <param name='tabs' value='no' />
+                    <param name='toolbar' value='yes' />
+                    <param name='static_image'
+                        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;predict_16069085618890&#47;finalimdbpred&#47;1.png' />
+                    <param name='animate_transition' value='yes' />
+                    <param name='display_static_image' value='yes' />
+                    <param name='display_spinner' value='yes' />
+                    <param name='display_overlay' value='yes' />
+                    <param name='display_count' value='yes' />
+                    <param name='language' value='en' />
+                    <param name='filter' value='publish=yes' /></object></div>
+            <script
+                type='text/javascript'>                    var divElement = document.getElementById('viz1606910611040'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+        </div>
+        <br>
+        <div class="sub" style="text-align: center;">From Commercial Point of View(taking imdb users votes into perspective)</div>
+        <div class="pred-com">
+            <div class='tableauPlaceholder' id='viz1606909714659' style='position: relative;width:50%;height: 571px;'>
+                <noscript><a href=' #'><img alt=' '
+                            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;predict_16069085618890&#47;finalimdbpred2&#47;1_rss.png'
+                            style='border: none' /></a></noscript><object class='tableauViz'
+                    style='display:none;width:50%;height: 571px;'>
+                    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                    <param name='embed_code_version' value='3' />
+                    <param name='site_root' value='' />
+                    <param name='name' value='predict_16069085618890&#47;finalimdbpred2' />
+                    <param name='tabs' value='no' />
+                    <param name='toolbar' value='yes' />
+                    <param name='static_image'
+                        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;predict_16069085618890&#47;finalimdbpred2&#47;1.png' />
+                    <param name='animate_transition' value='yes' />
+                    <param name='display_static_image' value='yes' />
+                    <param name='display_spinner' value='yes' />
+                    <param name='display_overlay' value='yes' />
+                    <param name='display_count' value='yes' />
+                    <param name='language' value='en' />
+                    <param name='filter' value='publish=yes' /></object></div>
+            <script
+                type='text/javascript'> var divElement = document.getElementById('viz1606909714659'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);</script>
+        </div>
+
+        <br>
+        <p
+            style="text-align: center;font-size: 25px;font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;color: darkorange;">
+            According to the forecasting, the following genre would perform better:</p>
+        <pre style="font-size: 25px;font-family: 'Times New Roman', Times, serif;font-weight: 500;">
+        For Critics centered movies:
+                                    1) Drama
+                                    2) Horror
+                                    3) Thriller
+        For Commercial Centeres movies:
+                                    1) Action
+                                    2) Comedy
+                                    3) Crime
+                                    4) Drama
+        </pre>
+
+        <div class="sub" style="text-align: center;"> Now, Actor Selection for particular any Genre</div>
+        <div class="actors">
+            <div class='tableauPlaceholder' id='viz1606912170086' style='position: relative;width:50%;height: 631px;'>
+                <noscript><a href='#'><img alt=' '
+                            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;predict_16069085618890&#47;Sheet4&#47;1_rss.png'
+                            style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+                    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                    <param name='embed_code_version' value='3' />
+                    <param name='site_root' value='' />
+                    <param name='name' value='predict_16069085618890&#47;Sheet4' />
+                    <param name='tabs' value='no' />
+                    <param name='toolbar' value='yes' />
+                    <param name='static_image'
+                        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;predict_16069085618890&#47;Sheet4&#47;1.png' />
+                    <param name='animate_transition' value='yes' />
+                    <param name='display_static_image' value='yes' />
+                    <param name='display_spinner' value='yes' />
+                    <param name='display_overlay' value='yes' />
+                    <param name='display_count' value='yes' />
+                    <param name='language' value='en' />
+                    <param name='filter' value='publish=yes' /></object></div>
+            <script
+                type='text/javascript'>                    var divElement = document.getElementById('viz1606912170086'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+        </div>
+
+
+        <div class="actors">
+            <div class='tableauPlaceholder' id='viz1606912206105' style='position: relative;width:50%;height: 631px;'>
+                <noscript><a href='#'><img alt=' '
+                            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;predict_16069085618890&#47;Sheet42&#47;1_rss.png'
+                            style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+                    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                    <param name='embed_code_version' value='3' />
+                    <param name='site_root' value='' />
+                    <param name='name' value='predict_16069085618890&#47;Sheet42' />
+                    <param name='tabs' value='no' />
+                    <param name='toolbar' value='yes' />
+                    <param name='static_image'
+                        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;predict_16069085618890&#47;Sheet42&#47;1.png' />
+                    <param name='animate_transition' value='yes' />
+                    <param name='display_static_image' value='yes' />
+                    <param name='display_spinner' value='yes' />
+                    <param name='display_overlay' value='yes' />
+                    <param name='display_count' value='yes' />
+                    <param name='language' value='en' />
+                    <param name='filter' value='publish=yes' /></object></div>
+            <script
+                type='text/javascript'>                    var divElement = document.getElementById('viz1606912206105'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+        </div>
+
+        <br>
+
+        <div class="sub" style="text-align: center;"> Runtime of Movie to keep in mind if producing in particular genre for assuring more potential
+            success </div>
+
+        <div class="run">
+            <div class='tableauPlaceholder' id='viz1606912856148' style='position: relative;width:50%;height: 671px;'><noscript><a href='#'><img
+                            alt=' '
+                            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;predict_16069085618890&#47;DurationOutliers&#47;1_rss.png'
+                            style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+                    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                    <param name='embed_code_version' value='3' />
+                    <param name='site_root' value='' />
+                    <param name='name' value='predict_16069085618890&#47;DurationOutliers' />
+                    <param name='tabs' value='no' />
+                    <param name='toolbar' value='yes' />
+                    <param name='static_image'
+                        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;predict_16069085618890&#47;DurationOutliers&#47;1.png' />
+                    <param name='animate_transition' value='yes' />
+                    <param name='display_static_image' value='yes' />
+                    <param name='display_spinner' value='yes' />
+                    <param name='display_overlay' value='yes' />
+                    <param name='display_count' value='yes' />
+                    <param name='language' value='en' />
+                    <param name='filter' value='publish=yes' /></object></div>
+            <script
+                type='text/javascript'>                    var divElement = document.getElementById('viz1606912856148'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+        </div>
+    </div>
+    <!-- jQuery and JS bundle w/ Popper.js -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
