--- a/sentiment.html
+++ b/sentiment.html
@@ -1,69 +1,161 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>KUMAVISA Entertainment</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="sen.css">
 </head>
+
 <body>
-    <br/>
+    <br />
     <div id="mySidenav" class="sidenav">
         <a href="#" id="about">Sachi Trambadia : 321057</a>
-        <a href="#" id="blog">Mahek Mulla      : 321043</a>
+        <a href="#" id="blog">Mahek Mulla : 321043</a>
         <a href="#" id="projects">Viraj Patil : 321025</a>
         <a href="#" id="contact">Kundan Kabra : 321023</a>
-      </div>
-      <div class="container jumbotron">
-        <div class="sub" style="text-align: center;font-size: larger;">Top Movies(2010-2019) According to IMDB Votes (Also IMDB rating filter added)</div>
+    </div>
+    <div class="container jumbotron">
+        <div class="sub" style="text-align: center;font-size: larger;">Top Movies(2010-2019) According to IMDB Votes
+            (Also IMDB rating filter added)</div>
         <br>
         <!-- top movies  -->
         <div class="top_movies">
-            <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'>
-            </script><div class='tableauPlaceholder' style='width: 50%; height: 571px;'>
-            <object class='tableauViz' width='100%' height='571' style='display:none;'>
-                <param name='host_url' value='https%3A%2F%2Fprod-apnortheast-a.online.tableau.com%2F' /> 
-                <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;kundankabra' /><param name='name' value='mini_2010to2019&#47;Sheet2' /><param name='tabs' value='no' /><param name='toolbar' value='yes' />
-                <param name='showAppBanner' value='false' /></object></div>
+            <div class='tableauPlaceholder' id='viz1606914628515' style='position: relative;height: 571px;'><noscript><a href='#'><img
+                            alt=' '
+                            src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;mi&#47;mini_2010to2019&#47;Sheet2&#47;1_rss.png'
+                            style='border: none;height: 571px;' /></a></noscript><object class='tableauViz' style='display:none;height: 571px;'>
+                    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                    <param name='embed_code_version' value='3' />
+                    <param name='site_root' value='' />
+                    <param name='name' value='mini_2010to2019&#47;Sheet2' />
+                    <param name='tabs' value='no' />
+                    <param name='toolbar' value='yes' />
+                    <param name='static_image'
+                        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;mi&#47;mini_2010to2019&#47;Sheet2&#47;1.png' />
+                    <param name='animate_transition' value='yes' />
+                    <param name='display_static_image' value='yes' />
+                    <param name='display_spinner' value='yes' />
+                    <param name='display_overlay' value='yes' />
+                    <param name='display_count' value='yes' />
+                    <param name='language' value='en' />
+                    <param name='filter' value='publish=yes' /></object></div>
+            <script
+                type='text/javascript'>                    var divElement = document.getElementById('viz1606914628515'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
         </div>
         <br>
         <!-- sentiments -->
         <div class="row">
-        <div class="col-sm-6 dangal">
-            <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'>
-            </script><div class='tableauPlaceholder' style='width: 60%; height: 400px;'>
-            <object class='tableauViz' width='100%' height='430px' style='display:none;'>
-                <param name='host_url' value='https%3A%2F%2Fprod-apnortheast-a.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;kundankabra' /><param name='name' value='Dangal&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' />
-                <param name='showAppBanner' value='false' /></object></div>
+            <div class="col-sm-6 dangal">
+                <div class='tableauPlaceholder' id='viz1606913755645' style='position: relative;'><noscript><a
+                            href='#'><img alt=' '
+                                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Dangal&#47;Sheet1&#47;1_rss.png'
+                                style='border: none;width: 50%;' /></a></noscript><object class='tableauViz'
+                        style='display:none;width: 50%;'>
+                        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                        <param name='embed_code_version' value='3' />
+                        <param name='site_root' value='' />
+                        <param name='name' value='Dangal&#47;Sheet1' />
+                        <param name='tabs' value='no' />
+                        <param name='toolbar' value='yes' />
+                        <param name='static_image'
+                            value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Da&#47;Dangal&#47;Sheet1&#47;1.png' />
+                        <param name='animate_transition' value='yes' />
+                        <param name='display_static_image' value='yes' />
+                        <param name='display_spinner' value='yes' />
+                        <param name='display_overlay' value='yes' />
+                        <param name='display_count' value='yes' />
+                        <param name='language' value='en' />
+                        <param name='filter' value='publish=yes' /></object></div>
+                <script
+                    type='text/javascript'>                    var divElement = document.getElementById('viz1606913755645'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+            </div>
+            <div class="col-sm-6 andhadhun">
+                <div class='tableauPlaceholder' id='viz1606913882304' style='position: relative'><noscript><a
+                            href='#'><img alt=' '
+                                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;an&#47;andhadhun&#47;Sheet1&#47;1_rss.png'
+                                style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+                        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                        <param name='embed_code_version' value='3' />
+                        <param name='site_root' value='' />
+                        <param name='name' value='andhadhun&#47;Sheet1' />
+                        <param name='tabs' value='no' />
+                        <param name='toolbar' value='yes' />
+                        <param name='static_image'
+                            value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;an&#47;andhadhun&#47;Sheet1&#47;1.png' />
+                        <param name='animate_transition' value='yes' />
+                        <param name='display_static_image' value='yes' />
+                        <param name='display_spinner' value='yes' />
+                        <param name='display_overlay' value='yes' />
+                        <param name='display_count' value='yes' />
+                        <param name='language' value='en' /></object></div>
+                <script
+                    type='text/javascript'>                    var divElement = document.getElementById('viz1606913882304'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+            </div>
+            <br>
+            <br>
+            <div class="col-sm-6 uri" style="margin-top: 10px;">
+                <div class='tableauPlaceholder' id='viz1606913858763' style='position: relative'><noscript><a
+                            href='#'><img alt=' '
+                                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ur&#47;uri&#47;Sheet1&#47;1_rss.png'
+                                style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+                        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                        <param name='embed_code_version' value='3' />
+                        <param name='site_root' value='' />
+                        <param name='name' value='uri&#47;Sheet1' />
+                        <param name='tabs' value='no' />
+                        <param name='toolbar' value='yes' />
+                        <param name='static_image'
+                            value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;ur&#47;uri&#47;Sheet1&#47;1.png' />
+                        <param name='animate_transition' value='yes' />
+                        <param name='display_static_image' value='yes' />
+                        <param name='display_spinner' value='yes' />
+                        <param name='display_overlay' value='yes' />
+                        <param name='display_count' value='yes' />
+                        <param name='language' value='en' />
+                        <param name='filter' value='publish=yes' /></object></div>
+                <script
+                    type='text/javascript'>                    var divElement = document.getElementById('viz1606913858763'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+            </div>
+            <div class="col-sm-6 section375" style="margin-top: 10px;">
+                <div class='tableauPlaceholder' id='viz1606913822001' style='position: relative'><noscript><a
+                            href='#'><img alt=' '
+                                src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;se&#47;section375&#47;Sheet1&#47;1_rss.png'
+                                style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+                        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                        <param name='embed_code_version' value='3' />
+                        <param name='site_root' value='' />
+                        <param name='name' value='section375&#47;Sheet1' />
+                        <param name='tabs' value='no' />
+                        <param name='toolbar' value='yes' />
+                        <param name='static_image'
+                            value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;se&#47;section375&#47;Sheet1&#47;1.png' />
+                        <param name='animate_transition' value='yes' />
+                        <param name='display_static_image' value='yes' />
+                        <param name='display_spinner' value='yes' />
+                        <param name='display_overlay' value='yes' />
+                        <param name='display_count' value='yes' />
+                        <param name='language' value='en' />
+                        <param name='filter' value='publish=yes' /></object></div>
+                <script
+                    type='text/javascript'>                    var divElement = document.getElementById('viz1606913822001'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+            </div>
         </div>
-        <div class="col-sm-6 andhadhun">
-            <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'>
-            </script><div class='tableauPlaceholder' style='width: 60%; height: 400px;'>
-            <object class='tableauViz' width='100%' height='430px' style='display:none;'>
-                <param name='host_url' value='https%3A%2F%2Fprod-apnortheast-a.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;kundankabra' /><param name='name' value='andhadhun&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' />
-                <param name='showAppBanner' value='false' /></object></div>
-        </div>
-        <br>
-        <div class="col-sm-6 dangal">
-            <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'>
-            </script><div class='tableauPlaceholder' style='width: 60%; height: 400px; margin-top: 5px;'>
-            <object class='tableauViz'  width='100%' height='430px' style='display:none;'><param name='host_url' value='https%3A%2F%2Fprod-apnortheast-a.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;kundankabra' /><param name='name' value='uri&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' />
-                <param name='showAppBanner' value='false' /></object></div>
-        </div>
-        <div class="col-sm-6 andhadhun">
-            <script type='text/javascript' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/viz_v1.js'>
-            </script><div class='tableauPlaceholder' style='width: 60%; height: 400px;margin-top: 5px;'>
-            <object class='tableauViz'   width='100%' height='430px' style='display:none;'><param name='host_url' value='https%3A%2F%2Fprod-apnortheast-a.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;kundankabra' /><param name='name' value='section375&#47;Sheet1' /><param name='tabs' value='no' />
-                <param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /></object></div>
-        </div>
-        </div>
-      </div>
+    </div>
 
+<br><br>
 
-<!-- jQuery and JS bundle w/ Popper.js -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <!-- jQuery and JS bundle w/ Popper.js -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
