--- a/alltime.html
+++ b/alltime.html
@@ -18,7 +18,7 @@
           </div>
         <br><br>
         <div class="container jumbotron">
-            <div class="head">New Movies to List on OTT</div>
+            <div class="head" style="text-align: center;font-size: 20px;padding-bottom: 5px;">All time Movies to List on OTT</div>
             <br>
             <div class="sub"></div>
 
